GH-10 aligne correctement le texte du header

--- a/front/src/app/header/header.component.scss
+++ b/front/src/app/header/header.component.scss
@@ -21,7 +21,6 @@ a {
 }
 
 .nav-bar {
-  line-height: 1em;
   width: 100%;
   padding-right: $padding;
   display: flex;
@@ -70,4 +69,10 @@ a {
 
 .dropdown-content a:hover {
   background-color: $blue2;
+}
+
+@media (max-width: 921px) {
+  .nav-bar {
+    line-height: initial;
+  }
 }
